demos/qos-classes/good/deployment-best-effort.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qos-best-effort
  labels:
    app: qos-best-effort
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qos-best-effort
  template:
    metadata:
      labels:
        app: qos-best-effort
    spec:
      volumes:
        - name: web
          emptyDir: {}
      containers:
        - name: web
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: web
              mountPath: /usr/share/nginx/html
          # No resources specified => BestEffort
