demos/qos-classes/good/deployment-burstable.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qos-burstable
  labels:
    app: qos-burstable
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qos-burstable
  template:
    metadata:
      labels:
        app: qos-burstable
    spec:
      volumes:
        - name: web
          emptyDir: {}
      containers:
        - name: web
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: web
              mountPath: /usr/share/nginx/html
          resources:
            requests:
              cpu: "50m"
              memory: "32Mi"
            limits:
              cpu: "200m"
              memory: "64Mi"
