demos/qos-classes/good/service-best-effort.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qos-best-effort
spec:
  selector:
    app: qos-best-effort
  ports:
    - port: 80
      targetPort: 80
