demos/qos-classes/good/service-burstable.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qos-burstable
spec:
  selector:
    app: qos-burstable
  ports:
    - port: 80
      targetPort: 80
